# llama2.c

./: .gitignore  Makefile  README.md  build_msvc.bat  pyproject.toml
.github/workflows/: build.yml
c/app/: app.c  app.h  main.c
c/core/net/: net.c
c/core/utils/: utils.c  utils.h
c/include/: app.h  config.h  net.h  quant.h  sampler.h  tokenizer.h  transformer.h
c/inference/quant/: quant.c  quant.h
c/inference/sampler/: sampler.c
c/inference/tokenizer/: tokenizer.c
c/model/transformer/: transformer.c  transformer.h  transformer_q.c
c/platform/win/: win.c
c/src/: app.c  main.c  net.c  quant.c  sampler.c  tokenizer.c  transformer.c  transformer_q.c  utils.c  win.c
python/: sample.py  tinystories.py  tokenizer.py  train.py
tests/: test.c  test_all.py
